<resources>
    <string name="app_name">Diary of Films</string>

    <string name="history_title">История просмотров</string>


    <string name="date_pattern" translatable="false">dd.MM.yyyy</string>
    <string name="date_mask" translatable="false">[00]{.}[00]{.}[0000]</string>

    <string name="adopt_film_title">Добавление фильма</string>
    <string name="adopt_film_name">Название фильма</string>
    <string name="adopt_film_year">Год выгода</string>
    <string name="adopt_film_subjective_rating">Личная оценка</string>
    <string name="adopt_film_rating">Рейтинг IMDB</string>
    <string name="adopt_film_watching_date">Дата просмотра</string>
    <string name="adopt_film_save">Сохранить</string>

    <string name="error_input_is_empty">Поле не заполнено</string>
    <string name="error_input_invalid">Некорректное значение</string>
    <string name="error_input_date_pattern">Некорректная дата</string>


    <string name="save">Сохранить</string>
    <string name="send">Отправить</string>
    <string name="sample_title">Заявка на аккредитив</string>
    <string name="sample_contract">Контракт</string>
    <string name="sample_contract_number">Контракт</string>
    <string name="sample_contract_date">Дата контракта</string>
    <string name="sample_amount">Сумма</string>
    <string name="sample_lc_amount">Сумма аккредитива</string>
    <string name="sample_commission">Комиссия банков за пределами Азербайджана будет списана</string>
    <string name="sample_account_seller">Со счета продавца</string>
    <string name="sample_account_buyer">Со счета покупателя</string>
    <string name="sample_seller">Продавец</string>
    <string name="sample_seller_name">Наименование продавца</string>
    <string name="sample_seller_address">Адрес продавца</string>
    <string name="sample_seller_bank">Банк продавца</string>
    <string name="sample_seller_bank_address">Адрес банка продавца</string>
    <string name="sample_lc">Aккредитив</string>
    <string name="sample_percent">Процентная ставка</string>
    <string name="sample_lc_type">Тип аккредитива</string>
    <string name="sample_lc_term">Срок аккредитива</string>
    <string name="sample_lc_payment">Оплата аккредитива</string>
    <string name="sample_delivery_conditions">Условия поставки</string>
    <string name="sample_conditions">Условия</string>
    <string name="sample_partial_shipment">Разрешена частичная отгрузка</string>
    <string name="sample_cargo_movement">Разрешено перемещение груза</string>
    <string name="sample_last_date">Последняя дата отправки</string>
    <string name="sample_shipment_place">Место отгрузки</string>
    <string name="sample_delivery_place">Место доставки</string>
    <string name="sample_description">Описание товара</string>
    <string name="sample_special_conditions">Особые условия</string>
    <string name="sample_contacts">Контакты</string>
    <string name="sample_full_name">ФИО контактного лица</string>
    <string name="sample_phone">Телефон контактного лица</string>
    <string name="sample_fax">Факс контактного лица</string>
    <string name="sample_documents">Документы</string>
    <string name="sample_term_granting">Срок предоставления документов</string>
    <string name="sample_account">Счет</string>
    <string name="sample_original">Оригинал</string>
    <string name="sample_copy">Копия</string>
    <string name="sample_no">Нет</string>
    <string name="sample_bill_lading">Коносамент</string>
    <string name="sample_waybill">Транспортная накладная</string>
    <string name="sample_crm">CRM</string>
    <string name="sample_fcr">FCR</string>
    <string name="sample_air_waybill">Авиа транспортная накладная</string>
    <string name="sample_rail_waybill">ЖД транспортная накладная</string>
    <string name="sample_insurance_policy">Страховой полис</string>
    <string name="sample_doc_name">Наименование документа</string>


</resources>
