<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="onSaveClick"
            type="android.view.View.OnClickListener" />

        <variable
            name="state"
            type="com.alexeykatsuro.diaryofilms.ui.adoptfilm.AdoptInputState" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/horizontal_screen_margin"
            android:layout_marginTop="@dimen/vertical_screen_margin"
            android:layout_marginEnd="@dimen/horizontal_screen_margin"
            android:hint="@string/adopt_film_name"
            app:bindInputState="@{state.title}"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_year"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/horizontal_screen_margin"
            android:layout_marginTop="@dimen/vertical_screen_margin"
            android:layout_marginEnd="@dimen/horizontal_screen_margin_half"
            android:hint="@string/adopt_film_year"
            app:bindInputState="@{state.year}"
            app:errorEnabled="true"
            app:layout_constraintEnd_toStartOf="@id/text_input_watching_date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_input_name">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_watching_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/horizontal_screen_margin_half"
            android:layout_marginTop="@dimen/vertical_screen_margin"
            android:layout_marginEnd="@dimen/horizontal_screen_margin"
            android:hint="@string/adopt_film_watching_date"
            app:bindInputState="@{state.watchingDate}"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/text_input_year"
            app:layout_constraintTop_toBottomOf="@id/text_input_name">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date"
                app:mask="@{@string/date_mask}" />
        </com.google.android.material.textfield.TextInputLayout>

        <include
            android:id="@+id/bar_rating"
            layout="@layout/include_rating_bar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:title="@{@string/adopt_film_rating}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_input_year" />


        <include
            android:id="@+id/bar_subjective_rating"
            layout="@layout/include_rating_bar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:title="@{@string/adopt_film_subjective_rating}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bar_rating" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_adopt"
            style="@style/Widget.DOF.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/vertical_screen_margin"
            android:layout_marginStart="@dimen/horizontal_screen_margin"
            android:layout_marginTop="@dimen/vertical_screen_margin"
            android:layout_marginEnd="@dimen/horizontal_screen_margin"
            android:onClick="@{onSaveClick}"
            android:text="@string/adopt_film_save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bar_subjective_rating" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>